Version 2.03.10 - 
=================================
  Failure in zeroing or wiping will fail command (bypass with -Zn, -Wn).
  Fix running out of free buffers for async writing for larger writes.
  Add integrity with raid capability.
  Fix support for lvconvert --repair used by foreign apps (i.e. Docker).

Version 2.03.09 - 26th March 2020
=================================
  Fix formating of vdopool (vdo_slab_size_mb was smaller by 2 bits).
  Fix showing of a dm kernel error when uncaching a volume with cachevol.

Version 2.03.08 - 11th February 2020
====================================
  Prevent problematic snapshots of writecache volumes.
  Add error handling for failing allocation in _reserve_area().
  Fix memleak in syncing of internal cache.
  Fix pvck dump_current_text memleak.
  Fix lvmlockd result code on error path for _query_lock_lv().
  Update pvck man page and help output.
  Reject invalid writecache high/low_watermark setting.
  Report writecache status.
  Accept more output lines from vdo_format.
  Prohibit reshaping of stacked raid LVs.
  Avoid running cache input arg validation when creating vdo pool.
  Prevent raid reshaping of stacked volumes.
  Added VDO lvmdbusd methods for enable/disable compression & dedupe.
  Added VDO lvmdbusd method for converting LV to VDO pool.

Version 2.03.07 - 30th November 2019
====================================
  Subcommand in vgck for repairing headers and metadata.
  Ensure minimum required region size on striped RaidLV creation.
  Fix resize of thin-pool with data and metadata of different segtype.
  Improve mirror type leg splitting.
  Improve error path handling in daemons on shutdown.
  Fix activation order when removing merged snapshot.
  Experimental VDO support for lvmdbusd.

Version 2.03.06 - 23rd October 2019
===================================
  Add _cpool suffix to cache-pool LV name when used by caching LV.
  No longer store extra UUID for cmeta and cdata cachevol layer.